# monkey.c

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  .gitlab-ci.yml  .gitmodules  Build.c  Build.h  CMakeLists.txt  README.adoc  Tupfile  Tuprules.tup  build.bat  build.sh  tupclean.sh
.github/workflows/: ci.yml
CMake/: DeclareModule.cmake
Modules/Embed/Source/: Embed.c
Modules/Monkey/Include/Monkey/: Ast.h  Lexer.h  Parser.h  Prelude.h  Token.h
Modules/Monkey/Source/: Ast.c  Lexer.c  Parser.c  Token.c
Modules/MonkeyRepl/Include/MonkeyRepl/: WhoAmI.h
Modules/MonkeyRepl/Source/: Main.c  WhoAmI.c
Modules/MonkeyTest/Include/MonkeyTest/: Lexer.h  Parser.h  Prelude.h
Modules/MonkeyTest/Input/Lexer/: NextToken.txt
Modules/MonkeyTest/Source/: Lexer.c  Main.c  Parser.c
Modules/SimpleString/Include/SimpleString/: String.h
Modules/SimpleString/Source/: String.c
Modules/TestFramework/Include/TestFramework/: Test.h
Modules/WindowsHelpers/Include/WindowsHelpers/: LeakCheck.h
cmake/: PushDirectory.cmake
embed/source/: main.c
hash/include/hash/: hash.h
hash/source/: hash.c
inc/: sds.h
inc/hash/: fnv.h  hash.h
inc/monkey/: ast.h  evaluator.h  lexer.h  object.h  parser.h  token.h
monkey/include/monkey/: ast.h  lexer.h  parser.h  token.h
monkey/source/: ast.c  lexer.c  parser.c  token.c
monkey_repl/source/: main.c
monkey_test/include/monkey_test/: test_lexer.h  test_parser.h
monkey_test/input/: next_token.test
monkey_test/source/: main.c  test_lexer.c  test_parser.c
nonstd/include/nonstd/: asprintf.h  strdup.h  strpbrk.h  strspn.h  strtok.h
nonstd/source/: asprintf.c  strdup.c  strpbrk.c  strspn.c  strtok.c
src/libhash/: fnv.c  hash.c
src/libmonkey/: ast.c  evaluator.c  lexer.c  object.c  parser.c  token.c
src/monkey_repl/: main.c  repl.c  repl.h
src/monkey_test/: test.c  test.h  test_ast.c  test_ast.h  test_evaluator.c  test_evaluator.h  test_lexer.c  test_lexer.h  test_parser.c  test_parser.h
string/include/string/: string.h
string/source/: string.c
test/include/test/: test.h
